--- a/package.json
+++ b/package.json
@@ -12,12 +12,17 @@
     "build:server": "NODE_ENV=production babel --delete-dir-on-start --ignore \"**/*.test.js\" --ignore \"**/__fixtures__\" --ignore \"**/test-helpers\" --copy-files --no-copy-ignored --out-dir ./.server ./src",
     "docker:dev": "NODE_ENV=development npm run server:watch",
     "dev": "NODE_ENV=local npm run server:watch",
-    "dev:setup": "scripts/start",
+    "dev:setup": "npm run setup:husky && npm run extractsql && docker compose up land-grants-backend-postgres -d && npm run docker:migrate:up",
     "dev:debug": "npm run server:debug",
-    "docker:db:migrate:up": "docker compose -f compose.migrations.yml run --rm database-up",
-    "docker:db:migrate:down": "docker compose -f compose.migrations.yml run --rm database-down",
-    "docker:up": "docker compose up --build -d",
+    "docker:migrate:up": "docker compose run --rm database-up",
+    "docker:migrate:down": "docker compose run --rm database-down",
+    "docker:migrate:ext:up": "docker compose -f compose.migrations.yml run --rm database-up",
+    "docker:migrate:ext:down": "docker compose -f compose.migrations.yml run --rm database-down",
+    "docker:up": "docker compose up -d",
     "docker:down": "docker compose down --remove-orphans",
+    "docker:localstack:up": "docker compose --profile localstack up -d",
+    "docker:localstack:down": "docker compose --profile localstack down --remove-orphans",
+    "docker:rebuild": "docker compose build && docker compose up -d",
     "format": "prettier --write \"src/**/*.js\" \"**/*.{js,cjs,md,json,config.js,test.js,graphql.js}\"",
     "format:check": "prettier --check \"src/**/*.js\" \"**/*.{js,cjs,md,json,config.js,test.js,graphql.js}\"",
     "git:pre-commit-hook": "npm run format:check && npm run lint && npm test",
@@ -30,7 +35,7 @@
     "test:unit": "jest --config=jest.unit.config.js --coverage --verbose --runInBand",
     "test:quick": "jest --config=jest.unit.config.js ",
     "test:watch": "jest --watch",
-    "test:db": "npm run extractsql && npx jest --config=jest.db.config.js --runInBand --coverage",
+    "test:db": "npm run extractsql && npm run docker:up && npm run docker:migrate:up npm && npx jest --config=jest.db.config.js --runInBand --coverage && npm run docker:down",
     "test:contracts": "npx jest --config=jest.contract.config.js",
     "merge:coverage": "./scripts/move-coverage && nyc merge coverage/tmp coverage/merged/coverage.json && nyc report --temp-dir coverage/merged --reporter=html --reporter=lcov --report-dir coverage/merged",
     "coverage:open": "open coverage/merged/index.html",
