Add postgres only npm script

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "docker:migrate:down": "docker compose run --rm database-down",
     "docker:migrate:ext:up": "docker compose -f compose.migrations.yml run --rm database-up",
     "docker:migrate:ext:down": "docker compose -f compose.migrations.yml run --rm database-down",
+    "docker:postgres:up": "docker compose up land-grants-backend-postgres -d",
     "docker:up": "docker compose up -d",
     "docker:down": "docker compose down --remove-orphans",
     "docker:localstack:up": "docker compose --profile localstack up -d",
