add the resource type to s3 file path

--- a/.env.example
+++ b/.env.example
@@ -24,7 +24,7 @@ AWS_SECRET_ACCESS_KEY=test
 S3_ENDPOINT=http://localhost:4566
 
 # Data Ingestion
-INGEST_BUCKET=dev-fcp-farming-sfi-reform-land-grants-data-c63f2
+INGEST_BUCKET=land-data
 INGEST_ENDPOINT=https://cdp-uploader.dev.cdp-int.defra.cloud/initiate
 INGEST_CALLBACK=https://land-grants-api.dev.cdp-int.defra.cloud/cdp-uploader-callback
 GRANTS_UI_HOST=https://grants-ui.dev.cdp-int.defra.cloud
