Refactor test setup: update `docker compose` commands, and add `compose.test.yml`.

--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "dev": "NODE_ENV=local npm run server:watch",
     "dev:setup": "npm run setup:husky && npm run extractsql && docker compose up land-grants-backend-postgres -d && npm run docker:migrate:up",
     "dev:debug": "npm run server:debug",
-    "docker:migrate:up": "docker compose run --rm database-up",
-    "docker:migrate:down": "docker compose run --rm database-down",
+    "docker:migrate:up": "docker compose --profile migrations run --rm database-up",
+    "docker:migrate:down": "docker compose --profile migrations run --rm database-down",
     "docker:migrate:ext:up": "docker compose -f compose.migrations.yml run --rm database-up",
     "docker:migrate:ext:down": "docker compose -f compose.migrations.yml run --rm database-down",
     "docker:postgres:up": "docker compose up land-grants-backend-postgres -d",
@@ -36,7 +36,7 @@
     "test:unit": "jest --config=jest.unit.config.js --coverage --verbose --runInBand",
     "test:quick": "jest --config=jest.unit.config.js ",
     "test:watch": "jest --watch",
-    "test:db": "npm run extractsql && npm run docker:up && npm run docker:migrate:up npm && npx jest --config=jest.db.config.js --runInBand --coverage && npm run docker:down",
+    "test:db": "npm run extractsql && docker compose -p land-grants-test --profile localstack -f compose.yml -f compose.test.yml up -d && docker compose -p land-grants-test -f compose.yml -f compose.test.yml --profile migrations run --rm database-up && npx jest --config=jest.db.config.js --runInBand --coverage; code=$?; docker compose -p land-grants-test down --volumes --remove-orphans; exit $code",
     "test:contracts": "npx jest --config=jest.contract.config.js",
     "merge:coverage": "./scripts/move-coverage && nyc merge coverage/tmp coverage/merged/coverage.json && nyc report --temp-dir coverage/merged --reporter=html --reporter=lcov --report-dir coverage/merged",
     "coverage:open": "open coverage/merged/index.html",
