--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "dev:debug": "npm run server:debug",
     "docker:migrate:up": "docker compose --profile migrations run --rm database-up",
     "docker:migrate:down": "docker compose --profile migrations run --rm database-down",
-    "docker:migrate:ext:up": "docker compose -f compose.migrations.yml run --rm database-up",
+    "docker:migrate:ext:up": "npm run extractsql && docker compose -f compose.migrations.yml run --rm database-up",
     "docker:migrate:ext:down": "docker compose -f compose.migrations.yml run --rm database-down",
     "docker:postgres:up": "docker compose up land-grants-backend-postgres -d",
     "docker:up": "docker compose up -d",
