add streaming data ingest, check for content type

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,8 @@
     ".server",
     "coverage",
     "node_modules",
-    "src/**/*.test.js"
+    "src/**/*.test.js",
+    "src/db-tests/**"
   ],
   "include": [
     "**/*.cjs",
