--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -58,7 +58,7 @@ jobs:
 
   contract-tests:
     name: Run Pact Contract Tests
-    if: github.event.pull_request.head.repo.full_name == github.repository
+    if: github.event.pull_request.head.repo.full_name == github.repository || github.event_name != 'pull_request'
     needs: build
     runs-on: self-hosted
     steps:
