--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "docker:rebuild": "docker compose build && docker compose up -d",
     "format": "prettier --write \"src/**/*.js\" \"**/*.{js,cjs,md,json,config.js,test.js,graphql.js}\"",
     "format:check": "prettier --check \"src/**/*.js\" \"**/*.{js,cjs,md,json,config.js,test.js,graphql.js}\"",
-    "git:pre-commit-hook": "npm run format:check && npm run lint && npm test",
+    "git:pre-commit-hook": "npm run format:check && npm run lint && npm run test:unit",
     "lint": "run-s lint:js lint:types",
     "lint:fix": "eslint --cache . --fix",
     "lint:js": "eslint --cache .",
