add import tests to PR build, remove unused fixtures

--- a/.github/workflows/check-pull-request.yml
+++ b/.github/workflows/check-pull-request.yml
@@ -31,6 +31,14 @@ jobs:
           npm run lint
           npm test
 
+      - name: Import tests
+        uses: actions/setup-node@v6
+        with:
+          node-version-file: '.nvmrc'
+          cache: npm
+      - run: |
+          npm run test:import
+
       - name: Test Docker Image Build
         run: |
           set +e
