put secrets in .env rather than a json file

--- a/.env.example
+++ b/.env.example
@@ -28,3 +28,15 @@ INGEST_BUCKET=land-data
 INGEST_ENDPOINT=https://cdp-uploader.dev.cdp-int.defra.cloud/initiate
 INGEST_CALLBACK=https://land-grants-api.dev.cdp-int.defra.cloud/cdp-uploader-callback
 GRANTS_UI_HOST=https://grants-ui.dev.cdp-int.defra.cloud
+
+# Data Ingest Client IDs and Secrets
+CLIENT_ID_DEV=xxx
+CLIENT_SECRET_DEV=xxx
+CLIENT_ID_TEST=xxx
+CLIENT_SECRET_TEST=xxx
+CLIENT_ID_PERF_TEST=xxx
+CLIENT_SECRET_PERF_TEST=xxx
+CLIENT_ID_EXT_TEST=xxx
+CLIENT_SECRET_EXT_TEST=xxx
+CLIENT_ID_PROD=xxx
+CLIENT_SECRET_PROD=xxx
