--- a/.github/workflows/build-seeded-db.yml
+++ b/.github/workflows/build-seeded-db.yml
@@ -15,12 +15,12 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v5
+        uses: actions/checkout@v6
 
-      - name: Build and push seeded DB image
-        uses: DEFRA/cdp-build-action/build@main
+      - name: Build and Publish
+        uses: DEFRA/cdp-build-action/build-dockerhub@main
         with:
-          image-name: land-grants-postgres-seeded
+          image-name: 'land-grants-postgres-seeded'
           dockerfile: ./db/Dockerfile.seeded
           context: ./db
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+          version: latest
