--- a/.github/workflows/build-seeded-db.yml
+++ b/.github/workflows/build-seeded-db.yml
@@ -8,6 +8,8 @@ on:
       - 'changelog/**'
       - 'src/api/common/migration/**'
       - 'db/Dockerfile.seeded'
+      - '.github/workflows/build-seeded-db.yml'
+  workflow_dispatch:
 
 permissions:
   id-token: write
