--- a/package.json
+++ b/package.json
@@ -33,13 +33,13 @@
     "lint:types": "tsc --build tsconfig.json",
     "postversion": "git add package.json package-lock.json && git commit -m $npm_package_version",
     "test": "npm run test:unit && npm run test:db && npm run merge:coverage",
-    "test:unit": "jest --config=jest.unit.config.js --coverage --verbose --runInBand",
-    "test:quick": "jest --config=jest.unit.config.js ",
-    "test:watch": "jest --watch",
-    "test:db": "npm run extractsql && docker compose -p land-grants-test --profile localstack -f compose.yml -f compose.test.yml up -d && docker compose -p land-grants-test -f compose.yml -f compose.test.yml --profile migrations run --rm database-up && npx jest --config=jest.db.config.js --runInBand --coverage; code=$?; docker compose -p land-grants-test down --volumes --remove-orphans; exit $code",
-    "test:db:up": "docker compose -p land-grants-test --profile localstack -f compose.yml -f compose.test.yml up -d && docker compose -p land-grants-test -f compose.yml -f compose.test.yml --profile migrations run --rm database-up && npx jest --config=jest.db.config.js --runInBand --coverage",
-    "test:import": "npm run extractsql && docker compose -p land-grants-test --profile localstack -f compose.yml -f compose.test.yml up -d && docker compose -p land-grants-test -f compose.yml -f compose.test.yml --profile migrations run --rm database-up && npx jest --config=jest.import.config.js --runInBand --coverage; code=$?; docker compose -p land-grants-test down --volumes --remove-orphans; exit $code",
-    "test:contracts": "npx jest --config=jest.contract.config.js",
+    "test:unit": "vitest run --config=vitest.unit.config.js --coverage",
+    "test:quick": "vitest run --config=vitest.unit.config.js",
+    "test:watch": "vitest --config=vitest.unit.config.js",
+    "test:db": "npm run extractsql && docker compose -p land-grants-test --profile localstack -f compose.yml -f compose.test.yml up -d && docker compose -p land-grants-test -f compose.yml -f compose.test.yml --profile migrations run --rm database-up && npx vitest run --config=vitest.db.config.js --coverage; code=$?; docker compose -p land-grants-test down --volumes --remove-orphans; exit $code",
+    "test:db:up": "docker compose -p land-grants-test --profile localstack -f compose.yml -f compose.test.yml up -d && docker compose -p land-grants-test -f compose.yml -f compose.test.yml --profile migrations run --rm database-up && npx vitest run --config=vitest.db.config.js --coverage",
+    "test:import": "npm run extractsql && docker compose -p land-grants-test --profile localstack -f compose.yml -f compose.test.yml up -d && docker compose -p land-grants-test -f compose.yml -f compose.test.yml --profile migrations run --rm database-up && npx vitest run --config=vitest.import.config.js --coverage; code=$?; docker compose -p land-grants-test down --volumes --remove-orphans; exit $code",
+    "test:contracts": "npx vitest run --config=vitest.contract.config.js",
     "merge:coverage": "./scripts/move-coverage && nyc merge coverage/tmp coverage/merged/coverage.json && nyc report --temp-dir coverage/merged --reporter=html --reporter=lcov --report-dir coverage/merged",
     "coverage:open": "open coverage/merged/index.html",
     "extractsql": "scripts/extract-gz-to-sql src/api/common/migration changelog/",
@@ -91,15 +91,14 @@
     "@pact-foundation/pact": "^15.0.1",
     "@shelf/jest-mongodb": "4.3.2",
     "@types/convict": "^6.1.6",
-    "@types/jest": "^29.5.14",
     "@types/lodash": "^4.17.13",
     "@types/node": "^24.10.1",
     "@types/nunjucks": "^3.2.6",
     "@types/webpack-assets-manifest": "^5.1.4",
     "@typescript-eslint/eslint-plugin": "^7.17.0",
     "@typescript-eslint/parser": "^7.17.0",
+    "@vitest/coverage-v8": "^2.1.8",
     "autoprefixer": "^10.4.20",
-    "babel-jest": "^29.7.0",
     "babel-loader": "^9.2.1",
     "babel-plugin-transform-import-meta": "^2.2.1",
     "cross-env": "^7.0.3",
@@ -108,15 +107,12 @@
     "eslint-config-standard": "^17.1.0",
     "eslint-import-resolver-typescript": "^3.6.3",
     "eslint-plugin-import": "^2.30.0",
-    "eslint-plugin-jest": "^28.8.3",
-    "eslint-plugin-jest-formatting": "^3.1.0",
     "eslint-plugin-jsdoc": "^48.8.3",
     "eslint-plugin-n": "^16.6.2",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-promise": "^6.4.0",
+    "eslint-plugin-vitest": "^0.5.4",
     "husky": "^9.1.6",
-    "jest": "^29.7.0",
-    "jest-fetch-mock": "3.0.3",
     "mockingoose": "^2.16.2",
     "nodemon": "^3.1.7",
     "npm-run-all": "^4.1.5",
@@ -124,6 +120,7 @@
     "prettier": "^3.3.3",
     "testcontainers": "^11.0.0",
     "tsx": "^4.19.2",
-    "typescript": "^5.6.3"
+    "typescript": "^5.6.3",
+    "vitest": "^2.1.9"
   }
 }
