TGC-955: Change context

--- a/.github/workflows/build-seeded-db.yml
+++ b/.github/workflows/build-seeded-db.yml
@@ -33,5 +33,5 @@ jobs:
         with:
           image-name: 'land-grants-postgres-seeded'
           dockerfile: ./db/Dockerfile.seeded
-          context: ./db
+          context: .
           version: latest
