--- a/package.json
+++ b/package.json
@@ -121,6 +121,7 @@
     "testcontainers": "^11.0.0",
     "tsx": "^4.19.2",
     "typescript": "^5.6.3",
-    "vitest": "^2.1.9"
+    "vitest": "^2.1.9",
+    "vitest-fetch-mock": "^0.4.5"
   }
 }
