SFIR-810: local api should start with data (#398)
* ingest dev data on dev startup

--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     "build:server": "NODE_ENV=production babel --delete-dir-on-start --ignore \"**/*.test.js\" --ignore \"**/__fixtures__\" --ignore \"**/test-helpers\" --copy-files --no-copy-ignored --out-dir ./.server ./src",
     "docker:dev": "NODE_ENV=development npm run server:watch",
     "dev": "NODE_ENV=local npm run server:watch",
-    "dev:setup": "npm run setup:husky && npm run extractsql && docker compose up land-grants-backend-postgres -d && npm run docker:migrate:up",
+    "dev:setup": "npm run setup:husky && npm run extractsql && docker compose up land-grants-backend-postgres -d && npm run docker:migrate:up && npm run dev:ingest",
     "dev:debug": "npm run server:debug",
-    "docker:migrate:up": "docker compose --profile migrations run --rm database-up",
+    "dev:ingest": "NODE_ENV='test' node scripts/local-ingest",
+    "docker:migrate:up": "docker compose --profile migrations run --rm database-up && npm run dev:ingest",
     "docker:migrate:down": "docker compose --profile migrations run --rm database-down",
-    "docker:migrate:ext:up": "npm run extractsql && docker compose -f compose.migrations.yml run --rm database-up",
+    "docker:migrate:ext:up": "npm run extractsql && docker compose -f compose.migrations.yml run --rm database-up && npm run dev:ingest",
     "docker:migrate:ext:down": "docker compose -f compose.migrations.yml run --rm database-down",
     "docker:postgres:up": "docker compose up land-grants-backend-postgres -d",
     "docker:up": "docker compose up -d land-grants-backend-postgres localstack",
