--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "@typescript-eslint/eslint-plugin": "^7.17.0",
     "@typescript-eslint/parser": "^7.17.0",
     "@vitest/coverage-v8": "^2.1.8",
+    "@vitest/eslint-plugin": "^1.6.4",
     "autoprefixer": "^10.4.20",
     "babel-loader": "^9.2.1",
     "babel-plugin-transform-import-meta": "^2.2.1",
