Add data layer query

--- a/package.json
+++ b/package.json
@@ -37,9 +37,9 @@
     "test:unit": "vitest run --config=vitest.unit.config.js --coverage",
     "test:quick": "vitest run --config=vitest.unit.config.js",
     "test:watch": "vitest --config=vitest.unit.config.js",
-    "test:db": "npm run extractsql && docker compose -p land-grants-test --profile localstack -f compose.yml -f compose.test.yml up -d && docker compose -p land-grants-test -f compose.yml -f compose.test.yml --profile migrations run --rm database-up && npx vitest run --config=vitest.db.config.js --coverage; code=$?; docker compose -p land-grants-test down --volumes --remove-orphans; exit $code",
+    "test:db": "docker compose -p land-grants-test --profile localstack up -d land-grants-backend-postgres localstack && docker compose -p land-grants-test --profile migrations run --rm database-up && npx vitest run --config=vitest.db.config.js --coverage; code=$? && docker compose -p land-grants-test down --volumes --remove-orphans; exit $code",
     "test:db:up": "docker compose -p land-grants-test --profile localstack -f compose.yml -f compose.test.yml up -d && docker compose -p land-grants-test -f compose.yml -f compose.test.yml --profile migrations run --rm database-up && npx vitest run --config=vitest.db.config.js --coverage",
-    "test:import": "npm run extractsql && docker compose -p land-grants-test --profile localstack -f compose.yml -f compose.test.yml up -d && docker compose -p land-grants-test -f compose.yml -f compose.test.yml --profile migrations run --rm database-up && npx vitest run --config=vitest.import.config.js --coverage; code=$?; docker compose -p land-grants-test down --volumes --remove-orphans; exit $code",
+    "test:import": "docker compose -p land-grants-test --profile localstack up -d land-grants-backend-postgres localstack && docker compose -p land-grants-test --profile migrations run --rm database-up && npx vitest run --config=vitest.import.config.js --coverage; code=$? && docker compose -p land-grants-test down --volumes --remove-orphans; exit $code",
     "test:contracts": "npx vitest run --config=vitest.contract.config.js",
     "merge:coverage": "./scripts/move-coverage && nyc merge coverage/tmp coverage/merged/coverage.json && nyc report --temp-dir coverage/merged --reporter=html --reporter=lcov --report-dir coverage/merged",
     "coverage:open": "open coverage/merged/index.html",
