--- a/.github/workflows/build-seeded-db.yml
+++ b/.github/workflows/build-seeded-db.yml
@@ -7,6 +7,7 @@ on:
     paths:
       - 'changelog/**'
       - 'src/api/common/migration/**'
+      - 'src/land-data/**'
       - 'db/Dockerfile.seeded'
       - '.github/workflows/build-seeded-db.yml'
   workflow_dispatch:
