update sonar config

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -13,7 +13,7 @@ sonar.links.scm=https://github.com/DEFRA/land-grants-api
 sonar.links.issue=https://github.com/DEFRA/land-grants-api/issues
 
 sonar.sources=src/
-sonar.exclusions=**/logger-options.js,**/config.js,**/index.js,**/__mocks__/*.cjs,**/__mocks__/*.js, src/api/common/helpers/seed-data/**,src/**/*.sql, src/db-tests/fixtures/**, src/db-tests/setup/**, src/db-tests/testLogger.js, src/available-area/availableArea.js, src/api/land-data-ingest/workers/ingest.worker.js, src/import-tests/fixtures/**, src/import-tests/setup/**
+sonar.exclusions=**/logger-options.js,**/config.js,**/index.js,**/__mocks__/*.cjs,**/__mocks__/*.js, src/api/common/helpers/seed-data/**,src/**/*.sql, src/tests/db-tests/fixtures/**, src/tests/db-tests/setup/**, src/tests/db-tests/testLogger.js, src/available-area/availableArea.js, src/api/land-data-ingest/workers/ingest.worker.js, src/tests/import-tests/fixtures/**, src/tests/import-tests/setup/**
 sonar.tests=src/
 sonar.test.inclusions=src/**/*.test.js
 
