update pr action

--- a/.github/workflows/check-pull-request.yml
+++ b/.github/workflows/check-pull-request.yml
@@ -31,13 +31,20 @@ jobs:
           npm run lint
           npm test
 
-      - name: Import & Api tests
+      - name: Import tests
         uses: actions/setup-node@v6
         with:
           node-version-file: '.nvmrc'
           cache: npm
       - run: |
           npm run test:import
+
+      - name: Api e2e tests
+        uses: actions/setup-node@v6
+        with:
+          node-version-file: '.nvmrc'
+          cache: npm
+      - run: |
           npm run test:e2e
 
       - name: Test Docker Image Build
