pass auth secrets to e2e test

--- a/.github/workflows/check-pull-request.yml
+++ b/.github/workflows/check-pull-request.yml
@@ -44,6 +44,10 @@ jobs:
         with:
           node-version-file: '.nvmrc'
           cache: npm
+        env: # Or as an environment variable
+          AUTH_HEADER_TOKEN: ${{ secrets.AUTH_HEADER_TOKEN }}
+          LAND_GRANTS_AUTH_TOKEN: ${{ secrets.LAND_GRANTS_AUTH_TOKEN }}
+          LAND_GRANTS_ENCRYPTION_KEY: ${{ secrets.LAND_GRANTS_ENCRYPTION_KEY }}
       - run: |
           npm run test:e2e
 
