Unify token used for testing

--- a/.env.example
+++ b/.env.example
@@ -40,3 +40,6 @@ CLIENT_ID_EXT_TEST=xxx
 CLIENT_SECRET_EXT_TEST=xxx
 CLIENT_ID_PROD=xxx
 CLIENT_SECRET_PROD=xxx
+
+# Test authentication token for e2e and load testing
+AUTH_HEADER_TOKEN=xxx
